# MultiBooty

./: .gitignore  README.md  curses_menu.py  curses_ui.py  debian_iso.py  fdisk_runner.py  grub.cfg  gs_runner.py  pyproject.toml  start_gui.py  tasks.py  test_ds.py  todos.txt
curses_ui/: configure_grub.py  controls.py  install_grub.py  install_multibooty.py  new_partitions.py  prompts.py  select_block_device.py  show_device_info.py  utils.py
curses_ui/common/: controls.py  curses_runner.py  filepicker.py  filereader.py  formatting.py  prints.py  prompts.py  utils.py  windows.py
curses_ui/disk_operations/: disk_operations.py  partition_disk.py
curses_ui/iso_bootloader_management/: iso_bootloader_management.py
curses_ui/select_device/: select_device.py
disk_ops/: block_devices.py  device_service.py  disk_info.py  disk_info_linux.py  disk_info_win.py  gather_block_info.py  gather_device_info.py  make_filesystems.py  partition_disk.py  partition_info.py  proposed_partitioning.py  runners.py
disk_ops/disks/: block_devices.py  disk_info.py  (+8 more)
documentation/: bootable.md  curses_sketch.md  fs.md  grub_config.md  grub_files.md  grub_notes.md  partitioning_format.md  sgdisk_notes.md  sys-fs.md
grub/: grub.cfg  grub_reader.py  grub_runners.py  grub_service.py  grub_writer.py  make_grub.py  make_menuentry.py  read_grub_cfg.py
gui/: common.py  device_tab.py  gui.py  iso_tab.py  local_package_tab.py  remote_package_tab.py  settings_tab.py
iso_tools/: arch_iso.py  debian_iso.py  rip_kernel_and_root.py
utils/: mounting.py  read_file_from_mount.py  runners.py
(+12 files in other folders)
