[tool.poetry]
name = "multibooty"
version = "0.1.0"
description = ""
authors = ["Samuli Nikkilä <sanikk@users.noreply.github.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
invoke = "^2.2.0"
pyside6 = "^6.8.2.1"
pyudev = "^0.24.3"
pycdlib = "^1.14.0"
pysquashfsimage = "^0.9.0"
pyparted = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
